# co-unit

./: .gitattributes  .gitignore  CHANGELOG.md  CNAME  Cargo.toml  README.md  counit-server.http
.github/workflows/: ci.yml  release.yml
_fixtures/domain-language/: sample.csv
_fixtures/java/: qdrant.http
_fixtures/java/api/: 0.json  BlogController.java
counit-client/: README.md
counit-feeder/: Cargo.toml
counit-index/: Cargo.toml  README.md  build.rs
counit-index/src/: cache.rs  intelligence.rs  lib.rs  main.rs  remotes.rs  repo.rs  symbol.rs
counit-index/src/document/: mod.rs  point.rs  text_range.rs
counit-index/src/indexes/: reader.rs
counit-index/src/intelligence/: code_navigation.rs  scope_resolution.rs
counit-index/src/intelligence/scope_resolution/: debug.rs  def.rs  import.rs  reference.rs  scope.rs
counit-index/src/query/: execute.rs  mod.rs  schema.rs  semantic_query.rs
counit-index/src/remotes/: github.rs
counit-index/src/semantic/: chunk.rs  configuration.rs  execute.rs  literal.rs  mod.rs  schema.rs  semantic.rs  semantic_query.rs
counit-index/src/webserver/: hoverable.rs  intelligence.rs
counit-server/: .gitignore  Cargo.toml  README.md  build.rs  counit-server.http  qdrant.http
counit-server/public/: config.json
counit-server/src/: application.rs  configuration.rs  main.rs
counit-server/src/agent/: agent.rs  exchange.rs  mod.rs  prompts.rs  tools.rs
counit-server/src/domain/: domain_loader.rs  domain_record.rs  domain_transpiler.rs  mod.rs
counit-server/src/dsl/: description_dsl.rs  mod.rs  query_description.rs
counit-server/src/model/: archguard_model.rs  archguard_openapi.rs  chapi_model.rs  mod.rs
counit-server/src/model/analyser/: api_analyser.rs  mod.rs
counit-server/src/model/dto/: query.rs
counit-server/src/repository/: literal.rs  mod.rs  payload.rs  semantic.rs  semantic_query.rs
counit-server/src/server/: agent_api.rs  archguard.rs  archguard_api.rs  chapi_model.rs  datamap_api.rs  domain_api.rs  embedding_api.rs  mod.rs  semantic_api.rs  structure_api.rs  translate_api.rs
docs/: development.md  function_calling.md  http-demo.md  instruction-workflow.md
docs/logs/: bleep.md
domain/: counit.csv  sample.csv
