[package]
name = "counit-index"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# embedding
#ort = "1.15.2"
ort = { git = "https://github.com/bloopai/ort", branch = "env-builder-telemetry" }

tokenizers = "0.13.3"
ndarray = "0.15.6"
qdrant-client = { version = "1.3.0", default-features = false }

# error handling
anyhow = "1.0.72"
thiserror = "1.0.44"

# logging
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "registry"] }
tracing-appender = "0.2.2"


# serialization
serde = "1.0.183"
erased-serde = "0.3.28"
serde_json = "1.0.104"
