[package]
name = "counit-index"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"

tokio = { version = "1.30.0", features = ["macros", "process", "rt", "rt-multi-thread", "io-std", "io-util", "sync", "fs"] }

# misc
uuid = { version = "1.4.0", features = ["v4", "fast-rng", "serde"] }
blake3 = "1.4.0"
scc = { version= "2.0.0", features = ["serde"] }

# embedding
#ort = "1.15.2"
ort = { git = "https://github.com/bloopai/ort", branch = "env-builder-telemetry" }

tokenizers = "0.13.3"
ndarray = "0.15.6"
qdrant-client = { version = "1.3.0", default-features = false }

# error handling
anyhow = "1.0.72"
thiserror = "1.0.44"

# logging
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "registry"] }
tracing-appender = "0.2.2"

#
regex = "1.9.3"
regex-syntax = "0.7.4"


# serialization
serde = "1.0.183"
erased-serde = "0.3.28"
serde_json = "1.0.104"
