[package]
name = "counit-server"
version = "0.1.3"
edition = "2021"
build = "build.rs"

[features]
default = ["dynamic-ort"]
dynamic-ort = ["ort/load-dynamic"]

[dependencies]
futures = "0.3.28"

# web server
tokio = { version = "1.30.0", features = ["macros", "process", "rt", "rt-multi-thread", "io-std", "io-util", "sync", "fs"] }

axum = { version = "0.6.18", features = ["http2", "headers"] }
axum-extra = { version = "0.7.4", features = ["cookie", "cookie-private"] }
tower = "0.4.13"
tower-http = { version = "0.4.1", features = ["auth", "cors", "catch-panic", "fs"] }

chrono = { version = "0.4.26", features = ["serde", "clock"], default-features = false }
time = { version = "0.3.22", default-features = false }

# i18n
stardict_wrapper = "0.0.5"

# third party
# the open api spec
utoipa = { version = "3", features = ["axum_extras"] }
# utoipa-swagger-ui
utoipa-swagger-ui = { version = "3", eatures = ["axum"] }

# embedding
ort = { git = "https://github.com/bloopai/ort", branch = "env-builder-telemetry" }
tokenizers = "0.13.3"
ndarray = "0.15.6"
qdrant-client = { version = "1.3.0", default-features = false }

jieba-rs = "0.6"

# error handling
anyhow = "1.0.72"
thiserror = "1.0.44"

# logging
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "registry"] }
tracing-appender = "0.2.2"

#
regex = "1.9.3"
regex-syntax = "0.7.4"


# serialization
serde = "1.0.183"
erased-serde = "0.3.28"
serde_json = "1.0.104"

# misc
blake3 = "1.4.0"
uuid = { version = "1.4.0", features = ["v4", "fast-rng", "serde"] }

[build-dependencies]
fs_extra = "1.3.0"
